首頁間隔設定完成

--- a/app/assets/style/components/_btn.scss
+++ b/app/assets/style/components/_btn.scss
@@ -18,3 +18,14 @@
         color: #FFF;
     }
 }
+
+.reserve-btn,
+.course-btn {
+    &:hover {
+        color: #FFF;
+    }
+}
+
+.fa-arrow {
+    margin-left: 11px;
+}
