--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -6,6 +6,10 @@
     background-size: cover;
 }
 
+.advantage-card {
+    height: 420px;
+}
+
 .teacher-info {
     .card-img {
         height: 628px;
@@ -34,14 +38,31 @@
 }
 
 .course-select {
-    .card-img {
-        height: 214px;
+
+    .course-card {
+        height: 497px;
+
+        .card-img {
+            height: 50%;
+            border-radius: 16px 16px 0px 0px;
+            display: block;
+        }
     }
 }
 
 .recommend {
-    .user-img {
-        width: 60px;
-        height: 60px;
+
+    .recommend-card {
+        padding: 14px 16px;
+
+        .user-img {
+            width: 60px;
+            height: 60px;
+            margin-right: 22px;
+        }
+    }
+
+    .mb-11 {
+        margin-bottom: 11px;
     }
 }
