--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -25,18 +25,18 @@
         </a>
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-gray" aria-current="page" href="#">課程介紹</a>
+            <a class="nav-link text-gray me-6 px-0" aria-current="page" href="#">課程介紹</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-gray" href="#">瑜珈空間</a>
+            <a class="nav-link text-gray me-6 px-0" href="#">瑜珈空間</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-gray" href="#">當月課表</a>
+            <a class="nav-link text-gray me-6 px-0" href="#">當月課表</a>
           </li>
         </ul>
         <div class="d-flex">
-          <button class="btn btn-outline-dark-brick-red" type="submit">立即預約</button>
-          <button class="btn btn-outline-dark-brick-red" type="submit">聯絡我們</button>
+          <button class="btn btn-outline-dark-brick-red rounded-lg me-3 reserve-btn" type="submit">立即預約</button>
+          <button class="btn btn-outline-dark-brick-red rounded-lg course-btn" type="submit">聯絡我們</button>
         </div>
       </div>
     </div>
@@ -46,31 +46,31 @@
 
   <footer class="footer bg-dark-brick-red">
     <div class="container">
-      <div class="footer-title d-flex justify-content-between">
-        <h3 class="text-white">現在訂閱，獲得課程優惠碼！</h3>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+      <div class="footer-title d-flex justify-content-between align-items-center py-6">
+        <h3 class="text-white m-0">現在訂閱，獲得課程優惠碼！</h3>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="輸入您的電子信箱" aria-label="Username"
             aria-describedby="basic-addon1">
-          <a href="#" class="btn btn-brick-red text-white">訂閱</a>
+          <a href="#" class="btn btn-brick-red text-white py-2 px-3">訂閱</a>
         </div>
       </div>
-      <div class="footer-body d-flex justify-content-between">
+      <div class="footer-body d-flex justify-content-between py-6">
         <div class="footer-item">
-          <img src="./assets/images/DOYOGA.png" alt="logo" class="logo">
+          <img src="./assets/images/DOYOGA.png" alt="logo" class="logo mb-2">
           <ul class="sub-navbar list-unstyled">
-            <li><a href="#" class="text-white">課程介紹</a></li>
-            <li><a href="#" class="text-white">瑜珈空間</a></li>
-            <li><a href="#" class="text-white">當月課表</a></li>
+            <li class="mb-2"><a href="#" class="text-white">課程介紹</a></li>
+            <li class="mb-2"><a href="#" class="text-white">瑜珈空間</a></li>
+            <li class="mb-2"><a href="#" class="text-white">當月課表</a></li>
           </ul>
         </div>
-        <div class="footer-item">
-          <p class="text-white">© 2021. All Rights Reserved.</p>
+        <div class="footer-item d-flex">
+          <p class="text-white align-self-end">© 2021. All Rights Reserved.</p>
         </div>
         <div class="footer-item">
           <ul class="footer-icon list-unstyled d-flex">
-            <li><a href="#" class="text-white"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#" class="text-white"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#" class="text-white"><i class="fab fa-line"></i></a></li>
+            <li><a href="#" class="text-white h4 me-2"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#" class="text-white h4 me-2"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#" class="text-white h4"><i class="fab fa-line"></i></a></li>
           </ul>
         </div>
       </div>
