首頁雛型完成

--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -11,7 +11,9 @@
 }
 
 .teacher-info {
+
     .card-img {
+        width: 100%;
         height: 628px;
         background-image: url(../images/photo-1540206276207-3af25c08abc4.jpeg);
         background-position: 0 90%;
@@ -64,5 +66,28 @@
 
     .mb-11 {
         margin-bottom: 11px;
+    }
+}
+
+.teacher-card {
+    top: 0;
+    right: 0;
+
+    &-item {
+        width: 100%;
+
+        &-lg {
+            width: 110%;
+        }
+    }
+}
+
+.icon-navbar {
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
+    .fab {
+        font-size: 48px;
     }
 }
