--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -42,6 +42,20 @@
     </div>
   </nav>
 
+  <div class="icon-navbar position-fixed">
+    <ul class="list-unstyled d-flex flex-column me-3">
+      <li class="mb-2">
+        <a href="#" class="text-dark-brick-red h4"><i class="fab fa-facebook"></i></a>
+      </li>
+      <li class="mb-2">
+        <a href="#" class="text-dark-brick-red h4"><i class="fab fa-instagram"></i></a>
+      </li>
+      <li class="mb-2">
+        <a href="#" class="text-dark-brick-red h4"><i class="fab fa-line"></i></a>
+      </li>
+    </ul>
+  </div>
+
   <%- contents %>
 
   <footer class="footer bg-dark-brick-red">
