立即預約 預約成功 頁面雛形

--- a/app/assets/style/pages/_reserve.scss
+++ b/app/assets/style/pages/_reserve.scss
@@ -1,8 +1,12 @@
-.reserve-info {
+.notice {
     width: 35%;
     margin-bottom: 104px;
 }
 
 .send-btn {
     margin-bottom: 116px;
+}
+
+.index-btn {
+    margin-bottom: 104px;
 }
