--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -25,7 +25,7 @@
         </a>
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-gray me-6 px-0" aria-current="page" href="#">課程介紹</a>
+            <a class="nav-link text-gray me-6 px-0" aria-current="page" href="class-introduction.html">課程介紹</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-gray me-6 px-0" href="#">瑜珈空間</a>
