課程介紹 頁面雛形

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -44,14 +44,14 @@
   </nav>
 
   <div class="icon-navbar position-fixed">
-    <ul class="list-unstyled d-flex flex-column me-3">
-      <li class="mb-2">
+    <ul class="list-unstyled d-flex flex-column justify-content-center align-items-center me-3">
+      <li class="mb-2 bg-white rounded-sm p-1">
         <a href="#" class="text-dark-brick-red h4"><i class="fab fa-facebook"></i></a>
       </li>
-      <li class="mb-2">
+      <li class="mb-2 bg-white rounded-sm p-1">
         <a href="#" class="text-dark-brick-red h4"><i class="fab fa-instagram"></i></a>
       </li>
-      <li class="mb-2">
+      <li class="mb-2 bg-white rounded-sm p-1">
         <a href="#" class="text-dark-brick-red h4"><i class="fab fa-line"></i></a>
       </li>
     </ul>
