瑜珈空間 頁面完成

--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -16,3 +16,4 @@
 @import "./pages/reserve";
 @import "./pages/class-introduction";
 @import "./pages/schedule";
+@import "./pages/class-environment";
