--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -28,7 +28,7 @@
             <a class="nav-link text-gray me-6 px-0" aria-current="page" href="class-introduction.html">課程介紹</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-gray me-6 px-0" href="#">瑜珈空間</a>
+            <a class="nav-link text-gray me-6 px-0" href="class-environment.html">瑜珈空間</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-gray px-0" href="schedule.html">當月課表</a>
@@ -45,13 +45,13 @@
 
   <div class="icon-navbar position-fixed">
     <ul class="list-unstyled d-flex flex-column justify-content-center align-items-center me-3">
-      <li class="mb-2 bg-white rounded-sm p-1">
+      <li class="mb-2 rounded-sm">
         <a href="#" class="text-dark-brick-red h4"><i class="fab fa-facebook"></i></a>
       </li>
-      <li class="mb-2 bg-white rounded-sm p-1">
+      <li class="mb-2 rounded-sm">
         <a href="#" class="text-dark-brick-red h4"><i class="fab fa-instagram"></i></a>
       </li>
-      <li class="mb-2 bg-white rounded-sm p-1">
+      <li class="mb-2 rounded-sm">
         <a href="#" class="text-dark-brick-red h4"><i class="fab fa-line"></i></a>
       </li>
     </ul>
