聯絡我們 頁面雛形

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -37,7 +37,8 @@
         <div class="d-flex">
           <a href="reserve-class.html" class="btn btn-outline-dark-brick-red rounded-lg me-3 reserve-btn py-2 px-3"
             type="submit">立即預約</a>
-          <a href="#" class="btn btn-outline-dark-brick-red rounded-lg course-btn py-2 px-3" type="submit">聯絡我們</a>
+          <a href="contact.html" class="btn btn-outline-dark-brick-red rounded-lg course-btn py-2 px-3"
+            type="submit">聯絡我們</a>
         </div>
       </div>
     </div>
