預約頁面新增選擇課程階級

--- a/app/assets/style/pages/_reserve.scss
+++ b/app/assets/style/pages/_reserve.scss
@@ -1,6 +1,5 @@
 .notice {
     width: 35%;
-    margin-bottom: 104px;
 }
 
 .send-btn {
@@ -9,4 +8,11 @@
 
 .index-btn {
     margin-bottom: 104px;
+}
+
+.select-border {
+    display: inline;
+    border-bottom: 2px solid #C0A4A5;
+    width: 14%;
+    text-align: center;
 }
