手機板 RWD完成

--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -17,3 +17,4 @@
 @import "./pages/class-introduction";
 @import "./pages/schedule";
 @import "./pages/class-environment";
+@import "./pages/contact";
