--- a/app/assets/style/pages/_reserve.scss
+++ b/app/assets/style/pages/_reserve.scss
@@ -1,11 +1,4 @@
-.send-btn {
-    margin-bottom: 116px;
-}
-
-.index-btn {
-    margin-bottom: 104px;
-}
-
+//選擇課程-底線
 .select-border {
     display: inline;
     border-bottom: 2px solid #C0A4A5;
