--- a/app/assets/style/base/_base.scss
+++ b/app/assets/style/base/_base.scss
@@ -1,12 +1,27 @@
+// 圖片置中
 .bg-cover {
     background-position: center center;
     background-size: cover;
 }
 
+// 取消連結底線
 a {
     text-decoration: none;
 }
 
 .logo {
     width: 96px;
+}
+
+//圓角設定
+.rounded-lg {
+    border-radius: 16px;
+}
+
+.rounded-md {
+    border-radius: 4.8px;
+}
+
+.rounded-sm {
+    border-radius: 4px;
 }
