--- a/app/assets/style/layout/_navigation.scss
+++ b/app/assets/style/layout/_navigation.scss
@@ -1,8 +1,20 @@
+//導覽列 hover 設定
 .nav-hover {
     border-bottom: 1px solid transparent;
     transition: all .3s;
 
     &:hover {
         border-bottom: 1px solid #707070;
+    }
+}
+
+//右側 icon 選單
+.icon-navbar {
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
+    .fab {
+        font-size: 48px;
     }
 }
