--- a/app/assets/style/pages/_class-introduction.scss
+++ b/app/assets/style/pages/_class-introduction.scss
@@ -1,9 +1,24 @@
+//限定課程圖片
 .special-class {
     .card-img {
         height: 341px;
     }
 }
 
+//課程彈跳視窗大小
+@media (max-width:992px) {
+    .modal-dialog-width {
+        max-width: 80%;
+    }
+}
+
+@media (max-width:576px) {
+    .modal-dialog-width {
+        max-width: 100%;
+    }
+}
+
+// 課程時間標籤
 .class-card {
     height: 196px;
     position: relative;
@@ -24,6 +39,7 @@
     }
 }
 
+//老師頭像照片
 .card-photo {
     border-radius: 50%;
     position: absolute;
@@ -31,16 +47,4 @@
     height: 96px;
     top: -12%;
     left: 38%;
-}
-
-@media (max-width:992px) {
-    .modal-dialog-width {
-        max-width: 80%;
-    }
-}
-
-@media (max-width:576px) {
-    .modal-dialog-width {
-        max-width: 100%;
-    }
 }
